--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -2,9 +2,9 @@
 server.port=8082
 
 #Dev TelegramBot Settings
-telegrambot.name=dev_ukrposhta_media_bot
+telegrambot.name=
 telegramBot.botPath=https://c1da-46-229-60-118.ngrok.io
-telegrambot.token=5134126556:AAGMKOopcJw7VEwz5cUKfhlbyl1zZb9LwvI
+telegrambot.token=
 
 #Dev TelegramBot proxy
 telegrambot.ProxyType=SOCKS5
@@ -18,4 +18,4 @@ telegram.piar.unit.second.chatId=102027711
 # link to google sheets for dev
 #https://docs.google.com/spreadsheets/d/1Wr5AaQO2UxTIV2R3HrNBofjxZrxsvzqCc_yIzu51opM/edit#gid=0
 google.application.name=MediaBot
-google.spreadsheet.id=1Wr5AaQO2UxTIV2R3HrNBofjxZrxsvzqCc_yIzu51opM
+google.spreadsheet.id=
