--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -12,10 +12,10 @@ telegrambot.ProxyHost=localhost
 telegrambot.ProxyPort=8082
 
 #id of telegram chats for getting message about new request
-telegram.piar.unit.first.chatId=982808764
-telegram.piar.unit.second.chatId=102027711
+telegram.piar.unit.first.chatId=
+telegram.piar.unit.second.chatId=
 
 # link to google sheets for dev
-#https://docs.google.com/spreadsheets/d/1Wr5AaQO2UxTIV2R3HrNBofjxZrxsvzqCc_yIzu51opM/edit#gid=0
+#https://docs.google.com/spreadsheets/d/------------/edit#gid=0
 google.application.name=MediaBot
 google.spreadsheet.id=
