--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,21 +1,32 @@
 #Port of tomcat
-server.port=8082
+server.port=8080
 
 #Dev TelegramBot Settings
-telegrambot.name=dev_ukrposhta_media_bot
-telegramBot.botPath=https://c1da-46-229-60-118.ngrok.io
-telegrambot.token=5134126556:AAGMKOopcJw7VEwz5cUKfhlbyl1zZb9LwvI
+telegrambot.name=
+telegramBot.botPath=https://ecc2-46-229-60-118.ngrok.io
+telegrambot.token=
 
 #Dev TelegramBot proxy
 telegrambot.ProxyType=SOCKS5
 telegrambot.ProxyHost=localhost
 telegrambot.ProxyPort=8082
 
+#Dev Viber Settings
+viberbot.baseUrl=https://chatapi.viber.com/pa
+viberbot.name=
+viberbot.token=
+viberbot.botPath=https://ecc2-46-229-60-118.ngrok.io
+viberbot.avatar=used_material/press_pin-03.png
+
 #id of telegram chats for getting message about new request
-telegram.piar.unit.first.chatId=982808764
-telegram.piar.unit.second.chatId=102027711
+telegram.piar.unit.first.chatId=
+telegram.piar.unit.second.chatId=
+
+#id of viber chats for getting message about new request
+viber.piar.unit.first.receiver=
+viber.piar.unit.second.receiver=
 
 # link to google sheets for dev
 #https://docs.google.com/spreadsheets/d/1Wr5AaQO2UxTIV2R3HrNBofjxZrxsvzqCc_yIzu51opM/edit#gid=0
 google.application.name=MediaBot
-google.spreadsheet.id=1Wr5AaQO2UxTIV2R3HrNBofjxZrxsvzqCc_yIzu51opM
+google.spreadsheet.id=
