Add test layer of application

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -2,9 +2,9 @@
 server.port=8080
 
 #Dev TelegramBot Settings
-telegrambot.name=
+telegrambot.name=dev_ukrposhta_media_bot
 telegramBot.botPath=https://ecc2-46-229-60-118.ngrok.io
-telegrambot.token=
+telegrambot.token=5134126556:AAGMKOopcJw7VEwz5cUKfhlbyl1zZb9LwvI
 
 #Dev TelegramBot proxy
 telegrambot.ProxyType=SOCKS5
@@ -13,14 +13,14 @@ telegrambot.ProxyPort=8082
 
 #Dev Viber Settings
 viberbot.baseUrl=https://chatapi.viber.com/pa
-viberbot.name=
-viberbot.token=
-viberbot.botPath=https://ecc2-46-229-60-118.ngrok.io
-viberbot.avatar=used_material/press_pin-03.png
+viberbot.name=dev_ukrposhta_media_bot
+viberbot.token=4f7eeb346127e70e-162b5277828626b9-c709def10fdf0a5d
+viberbot.botPath=https://2b8a-46-229-60-118.ngrok.io
+viberbot.avatar=used_material/1646214898_2-kartinkin-net-p-smi-kartinki-dlya-prezentatsii-3.png
 
 #id of telegram chats for getting message about new request
-telegram.piar.unit.first.chatId=
-telegram.piar.unit.second.chatId=
+telegram.piar.unit.first.chatId=98280876
+telegram.piar.unit.second.chatId=102027711
 
 #id of viber chats for getting message about new request
 viber.piar.unit.first.receiver=
@@ -29,4 +29,4 @@ viber.piar.unit.second.receiver=
 # link to google sheets for dev
 #https://docs.google.com/spreadsheets/d/1Wr5AaQO2UxTIV2R3HrNBofjxZrxsvzqCc_yIzu51opM/edit#gid=0
 google.application.name=MediaBot
-google.spreadsheet.id=
+google.spreadsheet.id=1Wr5AaQO2UxTIV2R3HrNBofjxZrxsvzqCc_yIzu51opM
