Added controller methods to view users in the cache and remove them one or all. Added controller methods to view piars in the cache, which can receive messages from media bots, and remove piars one or all, or add to the cache.

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -18,13 +18,11 @@ viberbot.token=4f7eeb346127e70e-162b5277828626b9-c709def10fdf0a5d
 viberbot.botPath=https://2b8a-46-229-60-118.ngrok.io
 viberbot.avatar=used_material/1646214898_2-kartinkin-net-p-smi-kartinki-dlya-prezentatsii-3.png
 
-#id of telegram chats for getting message about new request
-telegram.piar.unit.first.chatId=98280876
-telegram.piar.unit.second.chatId=102027711
+#Filepath for piar unit for telegram
+file.path.telegram=/piar_telegram_dev.txt
 
-#id of viber chats for getting message about new request
-viber.piar.unit.first.receiver=
-viber.piar.unit.second.receiver=
+#Filepath for piar unit for telegram
+file.path.viber=/piar_viber_dev.txt
 
 # link to google sheets for dev
 #https://docs.google.com/spreadsheets/d/----/edit#gid=0
