--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -18,13 +18,11 @@ viberbot.token=4f20e4068e67ddb8-cfa96642bc64ab8e-87e029bb86c4a2ff
 viberbot.botPath=https://ecc2-46-229-60-118.ngrok.io
 viberbot.avatar=used_material/press_pin-03.png
 
-#id of telegram chats for getting message about new request
-telegram.piar.unit.first.chatId=98280876
-telegram.piar.unit.second.chatId=102027711
+#Filepath for piar unit for telegram
+file.path.telegram=/piar_telegram_prod.txt
 
-#id of viber chats for getting message about new request
-viber.piar.unit.first.receiver=
-viber.piar.unit.second.receiver=
+#Filepath for piar unit for telegram
+file.path.viber=/piar_viber_prod.txt
 
 # link to google sheets for dev
 #https://docs.google.com/spreadsheets/d/----/edit#gid=0
