--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,4 +6,4 @@ spring.profiles.active=@spring.profiles.active@
 spring.profiles.default=dev
 
 #Scheduled set up
-cron.expression=0 0 7 * * ?
+cron=0 0 1 ? * SUN
