Added controller methods to view users in the cache and remove them one or all. Added controller methods to view piars in the cache, which can receive messages from media bots, and remove piars one or all, or add to the cache.

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,30 +1,11 @@
 #Port of tomcat
 server.port=8080
 
-#Dev TelegramBot Settings
-telegrambot.name=dev_ukrposhta_media_bot
-telegramBot.botPath=https://ecc2-46-229-60-118.ngrok.io
-telegrambot.token=5134126556:AAGMKOopcJw7VEwz5cUKfhlbyl1zZb9LwvI
 
-#Dev TelegramBot proxy
-telegrambot.ProxyType=SOCKS5
-telegrambot.ProxyHost=localhost
-telegrambot.ProxyPort=8082
 
-#Dev Viber Settings
-viberbot.baseUrl=https://chatapi.viber.com/pa
-viberbot.name=dev_ukrposhta_media_bot
-viberbot.token=4f7eeb346127e70e-162b5277828626b9-c709def10fdf0a5d
-viberbot.botPath=https://2b8a-46-229-60-118.ngrok.io
-viberbot.avatar=used_material/1646214898_2-kartinkin-net-p-smi-kartinki-dlya-prezentatsii-3.png
 
-#Filepath for piar unit for telegram
+#Dev filepath for piar unit for telegram
 file.path.telegram=/piar_telegram_dev.txt
 
-#Filepath for piar unit for telegram
+#Dev filepath for piar unit for telegram
 file.path.viber=/piar_viber_dev.txt
-
-# link to google sheets for dev
-#https://docs.google.com/spreadsheets/d/----/edit#gid=0
-google.application.name=MediaBot
-google.spreadsheet.id=1Wr5AaQO2UxTIV2R3HrNBofjxZrxsvzqCc_yIzu51opM
