--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,30 +1,10 @@
 #Port of tomcat
 server.port=8080
 
-#Main TelegramBot Settings
-telegrambot.name=ukrposhta_media_bot
-telegramBot.botPath=https://ecc2-46-229-60-118.ngrok.io
-telegrambot.token=5087216188:AAEbpxj4d0YhYoK7dvwFDe8GyeWlccHzsPk
 
-#Prod TelegramBot proxy
-telegrambot.ProxyType=SOCKS5
-telegrambot.ProxyHost=10.255.102.212
-telegrambot.ProxyPort=8080
 
-#Prod Viber Settings
-viberbot.baseUrl=https://chatapi.viber.com/pa
-viberbot.name=ukrposhta_media_bot
-viberbot.token=4f20e4068e67ddb8-cfa96642bc64ab8e-87e029bb86c4a2ff
-viberbot.botPath=https://ecc2-46-229-60-118.ngrok.io
-viberbot.avatar=used_material/press_pin-03.png
-
-#Filepath for piar unit for telegram
+#Prod filepath for piar unit for telegram
 file.path.telegram=/piar_telegram_prod.txt
 
-#Filepath for piar unit for telegram
+#Prod filepath for piar unit for telegram
 file.path.viber=/piar_viber_prod.txt
-
-# link to google sheets for dev
-#https://docs.google.com/spreadsheets/d/----/edit#gid=0
-google.application.name=MediaBot
-google.spreadsheet.id=1juzFkS2cZctAT7exY4N9fS4WfwrWZ3AVqweKJXAy0hE
